--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="header-inner-content">
         <div class="header-bottom-side">
           <div class="header-bottom-side-left">
-            <h2>Deia um novo estilo ao seu trabalho!</h2>
+            <h2>Dê um novo estilo ao seu trabalho!</h2>
             <p>
               Sucesso nem sempre tem haver com grandeza. Tem com consistência.
               Trabalho duro consistente supera o sucesso. A grandezavirá.
@@ -44,5 +44,135 @@
         </div>
       </div>
     </header>
+
+    <!-- main content-->
+    <main>
+      <div class="gray-background">
+        <div class="page-inner-content">
+          <div class="cols cols-3">
+            <img src="images/products/product-1.png" alt="">
+            <img src="images/products/product-2.png" alt="">
+            <img src="images/products/product-3.png" alt="">
+          </div>
+        </div>
+      </div>
+
+
+      <div>
+        <div class="page-inner-content">
+          <h3 class="section-title">Produtos Selecionados</h3>
+          <div class="subtitle-underline"></div>
+          <div class="cols cols-4">
+            <div class="product">
+              <img src="/images/products/product-4.png" alt="">
+              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+              <p class="product-price">4.000,00 <span>R$</span></p>
+            </div>
+            <div class="product">
+              <img src="/images/products/product-5.png" alt="">
+              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+              <p class="product-price">4.000,00 <span>R$</span></p>
+            </div>
+            <div class="product">
+              <img src="/images/products/product-6.png" alt="">
+              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+              <p class="product-price">4.000,00 <span>R$</span></p>
+            </div>
+            <div class="product">
+              <img src="/images/products/product-7.png" alt="">
+              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+              <p class="product-price">4.000,00 <span>R$</span></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="page-inner-content">
+          <h3 class="section-title">Ultimos Produtos</h3>
+          <div class="subtitle-underline"></div>
+          <div class="cols cols-4">
+            <div class="product">
+              <img src="/images/products/product-8.png" alt="">
+              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+              <p class="product-price">4.000,00 <span>R$</span></p>
+            </div>
+            <div class="product">
+              <img src="/images/products/product-9.png" alt="">
+              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+              <p class="product-price">4.000,00 <span>R$</span></p>
+            </div>
+            <div class="product">
+              <img src="/images/products/product-10.png" alt="">
+              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+              <p class="product-price">4.000,00 <span>R$</span></p>
+            </div>
+            <div class="product">
+              <img src="/images/products/product-11.png" alt="">
+              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+              <p class="product-price">4.000,00 <span>R$</span></p>
+            </div>
+            <div class="product">
+              <img src="/images/products/product-12.png" alt="">
+              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+              <p class="product-price">4.000,00 <span>R$</span></p>
+            </div>
+            <div class="product">
+              <img src="/images/products/product-13.png" alt="">
+              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+              <p class="product-price">4.000,00 <span>R$</span></p>
+            </div>
+            <div class="product">
+              <img src="/images/products/product-14.png" alt="">
+              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+              <p class="product-price">4.000,00 <span>R$</span></p>
+            </div>
+            <div class="product">
+              <img src="/images/products/product-15.png" alt="">
+              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+              <p class="product-price">4.000,00 <span>R$</span></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="gray-background">
+        <div class="header-inner-content">
+          <div class="header-bottom-side exclusive-container">
+            <div class="header-bottom-side-left">
+              <h2>Smart Band 4</h2>
+              <p>
+                O Mi smart Band 4 tem um tela AMOLED 39.9% maior que o Mi band
+                3, tela completamente digital com brilho ajustável, de tal modo
+                que tudo é claro ao máximo.
+              </p>
+              <button>Ver Agora &#8594;</button>
+            </div>
+            <div class="header-bottom-side-right">
+              <img src="images/exclusive.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <script>
+        const navbar = document.querySelector(".navbar");
+        const menuButton = document.querySelector(".menu-button");
+
+        menuButton.addEventListener('click', () =>{
+          navbar.classList.toggle("show-menu")
+        })
+    </script>
   </body>
 </html>
