versao com todos produtos atualizado

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h2>Dê um novo estilo ao seu trabalho!</h2>
             <p>
               Sucesso nem sempre tem haver com grandeza. Tem com consistência.
-              Trabalho duro consistente supera o sucesso. A grandezavirá.
+              Trabalho duro consistente supera o sucesso. A grandeza virá.
             </p>
             <button>Ver Agora &#8594;</button>
           </div>
@@ -67,25 +67,25 @@
               <img src="/images/products/product-4.png" alt="">
               <p class="product-name">Combo Gamer Meetion</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
-              <p class="product-price">4.000,00 <span>R$</span></p>
+              <p class="product-price"><span> R$</span>400,00</p>
             </div>
             <div class="product">
               <img src="/images/products/product-5.png" alt="">
-              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="product-name">Msi GTX 1650</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
-              <p class="product-price">4.000,00 <span>R$</span></p>
+              <p class="product-price"><span>R$</span>2.000,00</p>
             </div>
             <div class="product">
               <img src="/images/products/product-6.png" alt="">
-              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="product-name">Controle PS5</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
-              <p class="product-price">4.000,00 <span>R$</span></p>
+              <p class="product-price"> <span>R$</span> 450,00</p>
             </div>
             <div class="product">
               <img src="/images/products/product-7.png" alt="">
-              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="product-name">Cadeira Gamer TOP-Red</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
-              <p class="product-price">4.000,00 <span>R$</span></p>
+              <p class="product-price"><span>R$</span> 2.000,00</p>
             </div>
           </div>
         </div>
@@ -96,51 +96,51 @@
           <div class="cols cols-4">
             <div class="product">
               <img src="/images/products/product-8.png" alt="">
-              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="product-name">iPhone 14 Pro Max 512GB</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
-              <p class="product-price">4.000,00 <span>R$</span></p>
+              <p class="product-price"><span>R$</span> 4.599,00</p>
             </div>
             <div class="product">
               <img src="/images/products/product-9.png" alt="">
-              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="product-name">Galaxy S23 Ultra 1TB</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
-              <p class="product-price">4.000,00 <span>R$</span></p>
+              <p class="product-price"><span>R$</span> 4.229,00</p>
             </div>
             <div class="product">
               <img src="/images/products/product-10.png" alt="">
-              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="product-name">Asus Rog Phone 3 Gamer</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
-              <p class="product-price">4.000,00 <span>R$</span></p>
+              <p class="product-price"><span>R$</span> 5.000,00</p>
             </div>
             <div class="product">
               <img src="/images/products/product-11.png" alt="">
-              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="product-name">Xiaomi 13 Ultra 128GB</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
-              <p class="product-price">4.000,00 <span>R$</span></p>
+              <p class="product-price"><span>R$</span> 4.300,00</p>
             </div>
             <div class="product">
               <img src="/images/products/product-12.png" alt="">
-              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="product-name">Xbox Series X 1TB</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
-              <p class="product-price">4.000,00 <span>R$</span></p>
+              <p class="product-price"><span>R$</span> 4.000,00</p>
             </div>
             <div class="product">
               <img src="/images/products/product-13.png" alt="">
-              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="product-name">GT 480 Ferrari</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
-              <p class="product-price">4.000,00 <span>R$</span></p>
+              <p class="product-price"><span>R$</span> 6.000,00</p>
             </div>
             <div class="product">
               <img src="/images/products/product-14.png" alt="">
-              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="product-name">PlayStation 5</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
-              <p class="product-price">4.000,00 <span>R$</span></p>
+              <p class="product-price"><span>R$</span> 4.500,00</p>
             </div>
             <div class="product">
               <img src="/images/products/product-15.png" alt="">
-              <p class="product-name">Combo Gamer Meetion</p>
+              <p class="product-name">Desktop Gamer 3080Ti</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
-              <p class="product-price">4.000,00 <span>R$</span></p>
+              <p class="product-price"><span>R$</span> 7.000,00</p>
             </div>
           </div>
         </div>
@@ -164,7 +164,66 @@
           </div>
         </div>
       </div>
+
+      <div>
+        <div class="page-inner-content">
+          <div class="testimonials">
+            <div class="testimonial">
+              <p>"</p>
+              <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate commodi magni debitis magnam? Libero, odit natus, at sint reprehenderit placeat delectus nam nesciunt, fugiat perferendis quasi. In debitis rerum sapiente.</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
+              <p>Iohan Ribeiro</p>
+            </div>
+            <div class="testimonial">
+              <p>"</p>
+              <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate commodi magni debitis magnam? Libero, odit natus, at sint reprehenderit placeat delectus nam nesciunt, fugiat perferendis quasi. In debitis rerum sapiente.</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
+              <p>Gabriel Moreira</p>
+            </div>
+            <div class="testimonial">
+              <p>"</p>
+              <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate commodi magni debitis magnam? Libero, odit natus, at sint reprehenderit placeat delectus nam nesciunt, fugiat perferendis quasi. In debitis rerum sapiente.</p>
+              <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
+              <p>Zilmar Rocha</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </main>
+
+    <footer class="gray-background">
+      <div class="page-inner-content footer-content">
+        <div class="download-options">
+          <p>Baixar nosso aplicativo</p>
+          <p>Baixar nosso aplicativo para iOS e Android</p>
+          <div>
+            <img src="images/app-store.png" alt="">
+            <img src="images/play-store.png" alt="">
+          </div>
+        </div>
+
+        <div class="logo-footer">
+          <h1 class="logo">BLUE<span>STORE</span></h1>
+          <P>Nosso objetivo é que o preço e a qualidade andem junto ao nossos produtos.</P>
+        </div>
+
+        <div class="links-footer">
+          <h3>Links úteis</h3>
+          <ul>
+            <li>Cupons</li>
+            <li>Nosso Blog</li>
+            <li>Politicas</li>
+            <li>Torne-se um revendedor</li>
+          </ul>
+        </div>
+      </div>
+      <hr class="page-inner-content" />
+
+      <div class="page-inner-content copyright">
+        <p>Copyright 2024 - Valter Ribeiro - Todos os direitos reservados </p>
+      </div>
+    </footer>
 
     <script>
         const navbar = document.querySelector(".navbar");
